# librespot-android-connect

./: README.md  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/example/spotifyreceiver/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/spotifyreceiver/: MainActivity.kt  NativeBridge.kt  SpotifyService.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/spotifyreceiver/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: lib.rs
